--- a/application/index.html
+++ b/application/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             color: #202020;
-            background: #ffffff;
+            background: maroon;
             font-family: Verdana;
             font-size: 10pt
         }
