Add support for dark theme

--- a/application/index.html
+++ b/application/index.html
@@ -11,8 +11,8 @@
 
     <style>
         body {
-            color: #202020;
-            background: #ffffff;
+            background-color: #202020;
+            color: #ffffff;
             font-family: Verdana;
             font-size: 10pt
         }
