--- a/application/index.html
+++ b/application/index.html
@@ -11,8 +11,8 @@
 
     <style>
         body {
-            color: #202020;
-            background: #ffffff;
+            color: white;
+            background: black;
             font-family: Verdana;
             font-size: 10pt
         }
